# frc-visualizer

./: .gitattributes  .gitignore  DraggableTree.gd  Field2D.gd  Field2D.gd.uid  FreeLookCamera.gd  GamePieceManager.gd.uid  Main.gd  NTTreeView.gd  NTTreeView.gd.uid  NTTreeView.tscn  README.md  StructParser.gd  StructParser.gd.uid  Timeline.gd  Timeline.gd.uid  TopicDock.gd  TopicDock.gd.uid  TopicRow.gd  TopicRow.gd.uid  TopicRow.tscn  UISaveData.gd  VisualizerRegistry.gd  main.tscn  nt4.gdextension  nt4.gdextension.uid  project.godot  test_nt4.gd.uid
.github/workflows/: build.yml
assets/: robot.tres
fields/rebuilt_simple/: rebuilt_simple.tscn
godot/: DraggableTree.gd.uid  EditComponentDialog.gd  EditComponentDialog.gd.uid  EditRobotDialog.gd  EditRobotDialog.gd.uid  Field2D.gd  FreeLookCamera.gd.uid  GamePieceManager.gd  Main.gd  Main.gd.uid  ModelConfigDialog.gd  ModelConfigDialog.gd.uid  NTTreeView.gd  NTTreeView.gd.uid  RobotModelLibrary.gd  RobotModelLibrary.gd.uid  StructParser.gd  TopicDock.gd  TopicDock.tscn  TopicRow.gd  UISaveData.gd  UISaveData.gd.uid  VisualizerRegistry.gd  VisualizerRegistry.gd.uid  export_presets.cfg  icon.svg.import  main.tscn  nt4_logging.gdextension  nt4_logging.gdextension.uid  project.godot  test_nt4.gd
godot/visualizers/: ComponentVisualizer.gd  (+16 more)
nt4_logging/: Cargo.toml
nt4_logging/src/: lib.rs  log_store.rs  network.rs  nt4_node.rs  schema.rs  simple_logger_temp.rs
visualizers/: GamePieceVisualizer.gd  GamePieceVisualizer2D.gd  RobotVisualizer.gd  RobotVisualizer.gd.uid  RobotVisualizer2D.gd.uid  SwerveStateVisualizer.gd
(+74 files in other folders)
